// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Photo Gallery Page should not show the pop-out timestamp when allowDateStamp is false 1`] = `
<DocumentFragment>
  .emotion-2 {
  width: 100%;
  padding-bottom: 1.5rem;
}

@supports (display: grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding-bottom: 2rem;
  }
}

<div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="ErrorContainer"
      >
        <div
          id="DataContainer"
        >
          <noscript />
          <div>
            chartbeat
          </div>
          <div>
            comscore
          </div>
          <main
            class="emotion-0 emotion-1 emotion-2 emotion-3"
            dir="ltr"
            role="main"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Photo Gallery Page snapshots should match snapshot for PGL with about tags 1`] = `
.emotion-2 {
  width: 100%;
  padding-bottom: 1.5rem;
}

@supports (display: grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding-bottom: 2rem;
  }
}

<div>
  <div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="ErrorContainer"
      >
        <div
          id="DataContainer"
        >
          <noscript />
          <div>
            chartbeat
          </div>
          <div>
            comscore
          </div>
          <main
            class="emotion-0 emotion-1 emotion-2 emotion-3"
            dir="ltr"
            role="main"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Photo Gallery Page snapshots should match snapshot for PGL with all CPS onward journeys 1`] = `
.emotion-2 {
  width: 100%;
  padding-bottom: 1.5rem;
}

@supports (display: grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding-bottom: 2rem;
  }
}

.emotion-5 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-5 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-5 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-5 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-5 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-8 {
  margin-bottom: 1rem;
}

@media (max-width: 14.9375rem) {
  .emotion-8 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-8 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-8 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-8 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-8 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-8 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
  }
}

@media (max-width: 37.5rem) {
  .emotion-8 {
    padding-bottom: 2rem;
    margin-bottom: 1rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    margin-top: 0;
  }
}

.emotion-13 {
  margin: 0;
  padding: 0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-19 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    padding-right: 1rem;
  }
}

.emotion-22 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display: grid) {
  .emotion-22 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-22 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-25 {
  padding: 0.5rem 0 1rem;
}

@media (max-width: 62.9375rem) {
  .emotion-25 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-25:last-child {
  border: none;
}

@media (min-width: 37.5rem) {
  .emotion-25 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-25 {
    padding: 0 0 1.5rem;
  }
}

.emotion-25:first-child {
  padding-top: 0;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-25:first-child {
    padding-top: 1rem;
  }
}

.emotion-25:last-child {
  padding-bottom: 0;
}

@supports (display: grid) {
  .emotion-25 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-25 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-27 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-27 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-27 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-27 {
      display: block;
    }
  }
}

.emotion-29 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-29 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-29 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-31 {
  position: relative;
}

.emotion-33 {
  position: relative;
  height: 0;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-33 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-33 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-34 {
  width: 100%;
  object-fit: cover;
  height: auto;
}

@media (min-width: 25rem) {
  .emotion-35 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-35>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width: 24.9375rem) {
  .emotion-35>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-37 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-37 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-37 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-41 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-43 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-43 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-43 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-43 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-43 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-45 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-45 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-45 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-47 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
  overflow-wrap: anywhere;
}

.emotion-47:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-47:hover,
.emotion-47:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-47:visited {
  color: #6E6E73;
}

.emotion-49 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-50 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-50 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-50 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-61 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-61 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-61 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-69 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 0.8125rem;
}

<div>
  <div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="ErrorContainer"
      >
        <div
          id="DataContainer"
        >
          <noscript />
          <div>
            chartbeat
          </div>
          <div>
            comscore
          </div>
          <main
            class="emotion-0 emotion-1 emotion-2 emotion-3"
            dir="ltr"
            role="main"
          />
          <section
            aria-labelledby="related-content-heading"
            class="emotion-1 emotion-5 emotion-3"
            data-e2e="related-content-heading"
            dir="ltr"
            role="region"
          >
            <div
              class="emotion-7 emotion-8 emotion-3"
              dir="ltr"
            >
              <div
                class="emotion-10 emotion-11 emotion-12"
              >
                <h2
                  class="emotion-13 emotion-14"
                >
                  <span
                    class="emotion-15 emotion-16"
                  >
                    <span
                      class="emotion-17 emotion-18"
                    >
                      <span
                        class="emotion-19 emotion-20"
                        dir="ltr"
                        id="related-content-heading"
                      >
                        Another thing we de for inside dis tori
                      </span>
                    </span>
                  </span>
                </h2>
              </div>
              <ul
                class="emotion-3 emotion-22 emotion-23"
                dir="ltr"
                role="list"
              >
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Keyframe #1"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/26F1/production/_102896990_p06h05p7.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        >
                          <div
                            aria-hidden="true"
                            class="emotion-37 emotion-38"
                            data-e2e="media-indicator"
                            dir="ltr"
                          >
                            <div
                              class="emotion-39 emotion-40"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-41 emotion-42"
                                focusable="false"
                                height="12"
                                viewBox="0 0 12 12"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                >
                                  <path
                                    d="M.5.6h12v12H.5z"
                                  />
                                  <path
                                    d="M2.144.96v11.28l8.712-5.64z"
                                    fill="currentColor"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="emotion-43 emotion-44"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-45 emotion-46"
                      >
                        <a
                          aria-labelledby="promo-rel-content-pidginmedia45132087-1"
                          class="focusIndicatorDisplayInlineBlock emotion-47 emotion-48"
                          href="/pidgin/media-45132087"
                        >
                          <span
                            id="promo-rel-content-pidginmedia45132087-1"
                            role="text"
                          >
                            <span
                              class="emotion-49"
                            >
                              Video, 
                            </span>
                            <span>
                              Bole na correct Port Harcourt food.
                            </span>
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-50 emotion-51"
                        datetime="2018-08-09"
                      >
                        9th August 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-61 emotion-62"
                          data-e2e="image-placeholder"
                          style="padding-bottom: 56.25%;"
                        />
                        <div
                          class="emotion-35 emotion-36"
                        >
                          <div
                            aria-hidden="true"
                            class="emotion-37 emotion-38"
                            data-e2e="media-indicator"
                            dir="ltr"
                          >
                            <div
                              class="emotion-39 emotion-40"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-69 emotion-70"
                                focusable="false"
                                height="13px"
                                viewBox="0 0 32 26"
                                width="16px"
                              >
                                <path
                                  d="M9,2V0H4V2H0V26H32V2ZM6.5,10A2.5,2.5,0,1,1,9,7.52,2.5,2.5,0,0,1,6.5,10ZM20,23a9,9,0,1,1,9-9A9,9,0,0,1,20,23Z"
                                />
                                <circle
                                  cx="20"
                                  cy="14.02"
                                  r="5.5"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="emotion-43 emotion-44"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-45 emotion-46"
                      >
                        <a
                          aria-labelledby="promo-rel-content-pidgintori45242255-2"
                          class="focusIndicatorDisplayInlineBlock emotion-47 emotion-48"
                          href="/pidgin/tori-45242255"
                        >
                          <span
                            id="promo-rel-content-pidgintori45242255-2"
                            role="text"
                          >
                            <span
                              class="emotion-49"
                            >
                              Image gallery, 
                            </span>
                            <span>
                              Jollof Festival: West Africa no wan kwanta again unto which pesin jollof sweet pass
                            </span>
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-50 emotion-51"
                        datetime="2018-08-19"
                      >
                        19th August 2018
                      </time>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Photo Gallery Page snapshots should match snapshot for PGL with no onward journeys 1`] = `
.emotion-2 {
  width: 100%;
  padding-bottom: 1.5rem;
}

@supports (display: grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding-bottom: 2rem;
  }
}

<div>
  <div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="ErrorContainer"
      >
        <div
          id="DataContainer"
        >
          <noscript />
          <div>
            chartbeat
          </div>
          <div>
            comscore
          </div>
          <main
            class="emotion-0 emotion-1 emotion-2 emotion-3"
            dir="ltr"
            role="main"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Photo Gallery Page snapshots should match snapshot for PGL with non-CPS onward journeys filtered 1`] = `
.emotion-2 {
  width: 100%;
  padding-bottom: 1.5rem;
}

@supports (display: grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding-bottom: 2rem;
  }
}

.emotion-5 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-5 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-5 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-5 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-5 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-8 {
  margin-bottom: 1rem;
}

@media (max-width: 14.9375rem) {
  .emotion-8 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-8 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-8 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-8 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-8 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-8 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
  }
}

@media (max-width: 37.5rem) {
  .emotion-8 {
    padding-bottom: 2rem;
    margin-bottom: 1rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    margin-top: 0;
  }
}

.emotion-13 {
  margin: 0;
  padding: 0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-19 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    padding-right: 1rem;
  }
}

.emotion-22 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display: grid) {
  .emotion-22 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-22 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-22 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-25 {
  padding: 0.5rem 0 1rem;
}

@media (max-width: 62.9375rem) {
  .emotion-25 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-25:last-child {
  border: none;
}

@media (min-width: 37.5rem) {
  .emotion-25 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-25 {
    padding: 0 0 1.5rem;
  }
}

.emotion-25:first-child {
  padding-top: 0;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-25:first-child {
    padding-top: 1rem;
  }
}

.emotion-25:last-child {
  padding-bottom: 0;
}

@supports (display: grid) {
  .emotion-25 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-25 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-25 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-27 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-27 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-27 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-27 {
      display: block;
    }
  }
}

.emotion-29 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-29 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-29 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-31 {
  position: relative;
}

.emotion-33 {
  position: relative;
  height: 0;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-33 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-33 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-34 {
  width: 100%;
  object-fit: cover;
  height: auto;
}

@media (min-width: 25rem) {
  .emotion-35 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-35>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width: 24.9375rem) {
  .emotion-35>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-37 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-37 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-37 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-37 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-37 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-39 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-39 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-39 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-41 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
  overflow-wrap: anywhere;
}

.emotion-41:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-41:hover,
.emotion-41:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-41:visited {
  color: #6E6E73;
}

.emotion-43 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-43 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-43 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-142 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-142 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-142 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-144 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-146 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-154 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-166 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-166 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-166 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

<div>
  <div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="ErrorContainer"
      >
        <div
          id="DataContainer"
        >
          <noscript />
          <div>
            chartbeat
          </div>
          <div>
            comscore
          </div>
          <main
            class="emotion-0 emotion-1 emotion-2 emotion-3"
            dir="ltr"
            role="main"
          />
          <section
            aria-labelledby="related-content-heading"
            class="emotion-1 emotion-5 emotion-3"
            data-e2e="related-content-heading"
            dir="ltr"
            role="region"
          >
            <div
              class="emotion-7 emotion-8 emotion-3"
              dir="ltr"
            >
              <div
                class="emotion-10 emotion-11 emotion-12"
              >
                <h2
                  class="emotion-13 emotion-14"
                >
                  <span
                    class="emotion-15 emotion-16"
                  >
                    <span
                      class="emotion-17 emotion-18"
                    >
                      <span
                        class="emotion-19 emotion-20"
                        dir="ltr"
                        id="related-content-heading"
                      >
                        Bu barədə daha geniş
                      </span>
                    </span>
                  </span>
                </h2>
              </div>
              <ul
                class="emotion-3 emotion-22 emotion-23"
                dir="ltr"
                role="list"
              >
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Azərbaycan Xalq Cümhuriyyətinin zabit və əsgərləri"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/A943/production/_100713334_officersandsoldiers.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan44124647-1"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-44124647"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan44124647-1"
                          >
                            ADR və Qazaxdan Qarsadək müsəlman dəhlizi ideyası
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-05-17"
                      >
                        17 May 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Əhməd Ağayevin şəkli"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/FAB0/production/_100567146_aghayev1.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan43540056-2"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-43540056"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan43540056-2"
                          >
                            ADR-100: Türk Əsgəri üçün Cəbrayıl çörəyi
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-03-27"
                      >
                        27 Mart 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Marneuli"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/219C/production/_101240680_gettyimages-98040059.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan44022776-3"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-44022776"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan44022776-3"
                          >
                            Borçalı: Tortdan hərəyə bir tikə - təkbaşına isə onu yemək olmaz
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-05-10"
                      >
                        10 May 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Fətəli Xan Xoyski"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/1537C/production/_100780968_xoyski2.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan43713137-4"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-43713137"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan43713137-4"
                          >
                            Cümhuriyyət hökuməti Azərbaycanı necə idarə edirdi? İlk 6 ayın hadisələri
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-04-10"
                      >
                        10 Aprel 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Bakı 1991"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/FFA6/production/_91964456_gettyimages-52022706.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan37688691-5"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-37688691"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan37688691-5"
                          >
                            1918-1991: Bir müstəqilliyin iki bəyanı
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2016-10-18"
                      >
                        18 Oktyabr 2016
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="sakin"
                            class="emotion-34"
                            height="576"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/70A5/production/_91973882_p04cfdmb.jpg.webp 660w"
                            width="1024"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        >
                          <div
                            aria-hidden="true"
                            class="emotion-142 emotion-143"
                            data-e2e="media-indicator"
                            dir="ltr"
                          >
                            <div
                              class="emotion-144 emotion-145"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-146 emotion-147"
                                focusable="false"
                                height="12"
                                viewBox="0 0 12 12"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                >
                                  <path
                                    d="M.5.6h12v12H.5z"
                                  />
                                  <path
                                    d="M2.144.96v11.28l8.712-5.64z"
                                    fill="currentColor"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan37691096-6"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-37691096"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan37691096-6"
                            role="text"
                          >
                            <span
                              class="emotion-154"
                            >
                              Video, 
                            </span>
                            <span>
                              Bakı sakinləri müstəqillik barədə danışır
                            </span>
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2016-10-18"
                      >
                        18 Oktyabr 2016
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-166 emotion-167"
                          data-e2e="image-placeholder"
                          style="padding-bottom: 56.25%;"
                        />
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan201410141014_kars_agreement-7"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan/2014/10/141014_kars_agreement"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan201410141014_kars_agreement-7"
                          >
                            21-ci ilin Qars müqaviləsi: bu necə baş verdi?
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2016-10-18"
                      >
                        18 Oktyabr 2016
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-166 emotion-167"
                          data-e2e="image-placeholder"
                          style="padding-bottom: 56.25%;"
                        />
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan201411141103_russian_revolution_azerbaijan-8"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan/2014/11/141103_russian_revolution_azerbaijan"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan201411141103_russian_revolution_azerbaijan-8"
                          >
                            Azərbaycana sovet təcrübəsi lazım idimi?
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2016-10-18"
                      >
                        18 Oktyabr 2016
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-166 emotion-167"
                          data-e2e="image-placeholder"
                          style="padding-bottom: 56.25%;"
                        />
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan201408140801_azerbaijan_ww1-9"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan/2014/08/140801_azerbaijan_ww1"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan201408140801_azerbaijan_ww1-9"
                          >
                            "Qafqazın Pensilvaniyası" - Bakı və I Dünya Müharibəsi
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2016-10-18"
                      >
                        18 Oktyabr 2016
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Bakı neft yataqları"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/0E8A/production/_100522730_gettyimages-3296459-1.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan43499221-10"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-43499221"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan43499221-10"
                          >
                            1918-ci ilə baxış: Mayın 28-nə aparan o yaz günlərində həyat necə idi?
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-03-22"
                      >
                        22 Mart 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="Zaqatala"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/0A7E/production/_101168620_4e70b0c9c347b14fc02b9b3c2897bab0.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan44004471-11"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-44004471"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan44004471-11"
                          >
                            #ADR100 Zaqatala: Azərbaycanın qalib gəldiyi mübahisə
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-05-04"
                      >
                        4 May 2018
                      </time>
                    </div>
                  </div>
                </li>
                <li
                  class="emotion-3 emotion-25 emotion-26"
                  dir="ltr"
                >
                  <div
                    class="emotion-27 emotion-28"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-29 emotion-30"
                      dir="ltr"
                    >
                      <div
                        class="emotion-31 emotion-32"
                      >
                        <div
                          class="emotion-33"
                          style="padding-bottom: 56.25%; overflow: hidden;"
                        >
                          <img
                            alt="İran hərbçiləri, 1911-ci il Tehran"
                            class="emotion-34"
                            height="549"
                            loading="lazy"
                            sizes="(min-width: 1020px) 232px, calc(31.86vw - 7px)"
                            src="https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp"
                            srcset="https://ichef.test.bbci.co.uk/ace/ws/70/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 70w, https://ichef.test.bbci.co.uk/ace/ws/95/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 95w, https://ichef.test.bbci.co.uk/ace/ws/144/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 144w, https://ichef.test.bbci.co.uk/ace/ws/183/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 183w, https://ichef.test.bbci.co.uk/ace/ws/240/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 240w, https://ichef.test.bbci.co.uk/ace/ws/320/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 320w, https://ichef.test.bbci.co.uk/ace/ws/660/cpsprodpb/1E1B/production/_101070770_gettyimages-3348212.jpg.webp 660w"
                            width="976"
                          />
                        </div>
                        <div
                          class="emotion-35 emotion-36"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-37 emotion-38"
                      dir="ltr"
                    >
                      <h3
                        class="emotion-39 emotion-40"
                      >
                        <a
                          aria-labelledby="promo-rel-content-azeriazerbaijan43870815-12"
                          class="focusIndicatorDisplayInlineBlock emotion-41 emotion-42"
                          href="/azeri/azerbaijan-43870815"
                        >
                          <span
                            id="promo-rel-content-azeriazerbaijan43870815-12"
                          >
                            Cümhuriyyət hökumətinin İranla əlaqələri necə idi?
                          </span>
                        </a>
                      </h3>
                      <time
                        class="emotion-43 emotion-44"
                        datetime="2018-04-29"
                      >
                        29 Aprel 2018
                      </time>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;
